cluster/queenbee/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: queenbee-frontend
  namespace: queenbee
  labels:
    app: queenbee-frontend
spec:
  type: ClusterIP
  selector:
    app: queenbee-frontend
  ports:
    - protocol: TCP
      port: 4200
      name: https
      targetPort: 4200
