cluster/queenbee/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: queenbee-frontend-ingress
  namespace: queenbee
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Content-Security-Policy "default-src 'self' https://api.mazemap.com; img-src 'self' blob: data:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://api.mazemap.com; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://api.mazemap.com https://www.google-analytics.com; font-src https://fonts.googleapis.com https://fonts.gstatic.com; connect-src 'self' https://queenbee-api.login.no";
spec:
  ingressClassName: nginx-external
  tls:
    - hosts:
        - queenbee.login.no
  rules:
    - host: queenbee.login.no
      http:
        paths:
          - pathType: Prefix
            path: "/usr/src/app/dist/queenbee/"
            backend:
              service:
                name: queenbee-frontend
                port:
                  number: 4200
